test/warnings/bad/write_to_r1.ulm
.text
main:
    ; r1 is a read-only register
    loadi r1 1